feat: implement dedicated Chrome profile for Selenium scraping
## New Features (v0.108)
- Dedicated Chrome profile in AppData isolated from user browser
- Automatic cookie migration from Configuration/ to AppData/Eden/
- Multi-OS path support (Windows/Linux/macOS)
- Chrome profile management UI with size display and purge button
- Backup integration includes ChromeProfile/ directory

## Added Files
- Functions/path_manager.py: 4 new methods for AppData paths
  - get_user_data_dir(): OS-specific user data directory
  - get_eden_data_dir(): Eden data folder in AppData
  - get_chrome_profile_path(): Dedicated Chrome profile directory
  - get_eden_cookies_path(): Eden cookies file path

- Documentations/Eden/CHROME_PROFILE_TECHNICAL_EN.md: Complete technical documentation

## Modified Files
- Functions/cookie_manager.py:
  - Added automatic cookie migration from Configuration/ to Eden/
  - Added clear_chrome_profile(): Purge profile cache/history
  - Added get_chrome_profile_size(): Calculate profile size
  - Modified _try_chrome(): Use dedicated profile with --user-data-dir

- Functions/backup_manager.py:
  - Updated _perform_cookies_backup() to use AppData paths
  - Backup now includes ChromeProfile/ folder

- UI/dialogs.py (CookieManagerDialog):
  - Added Chrome Profile section with size display
  - Added purge profile button with confirmation dialog
  - Added update_chrome_profile_size() method

- Language/fr.json, en.json, de.json:
  - Added 10 new translation keys for Chrome profile UI

- Documentations/Backups/BACKUP_ARCHITECTURE.md:
  - Updated with v0.108 cookie migration details
  - Added path_manager dependency
  - Added Security Considerations section

## Architecture Changes
- Cookie storage: Configuration/eden_cookies.pkl  %LOCALAPPDATA%/DAOC_Character_Manager/Eden/eden_cookies.pkl
- Chrome profile: No profile  Dedicated profile in AppData/Eden/ChromeProfile/
- Backup scope: Cookies file  Full Eden/ folder (includes profile)

## Migration
- Automatic one-t

--- a/Language/en.json
+++ b/Language/en.json
@@ -143,6 +143,7 @@
         "title": "🍪 Eden Cookies Management",
         "info_group_title": "📊 Cookies Status",
         "import_group_title": "📂 Manual Import",
+        "chrome_profile_section": "🔧 Dedicated Chrome Profile",
         "file_path_label": "File path:",
         "file_path_placeholder": "Select a .pkl file or enter the path",
         "generate_tooltip": "Opens a browser to connect and retrieve cookies",
@@ -165,6 +166,16 @@
         "session_cookies": "🔄 Session: {count}",
         "file_location": "<br/>📁 File: {path}",
         "test_with_browser": "{icon} <i>Test performed with: {browser}</i>",
+        "chrome_profile_size": "📊 Profile size: {size}",
+        "chrome_profile_size_empty": "📊 Empty profile (not used)",
+        "clear_chrome_profile": "Clear Chrome Profile",
+        "clear_chrome_profile_tooltip": "Deletes all data from the dedicated Chrome profile (cache, history, etc.)",
+        "clear_chrome_confirm_title": "Confirm Purge",
+        "clear_chrome_confirm_message": "Are you sure you want to purge the dedicated Chrome profile?\n\nThis will delete cache, history and all stored data.\nEden cookies will NOT be deleted.",
+        "clear_chrome_success_title": "Success",
+        "clear_chrome_success_message": "Chrome profile purged successfully.",
+        "clear_chrome_error_title": "Error",
+        "clear_chrome_error_message": "Unable to purge Chrome profile.",
         "browse_dialog_title": "Select a cookie file",
         "browse_dialog_filter": "Pickle Files (*.pkl);;All Files (*.*)",
         "import_warning_title": "Warning",
