--- a/Language/de.json
+++ b/Language/de.json
@@ -143,6 +143,7 @@
         "title": "🍪 Eden-Cookies-Verwaltung",
         "info_group_title": "📊 Cookie-Status",
         "import_group_title": "📂 Manueller Import",
+        "chrome_profile_section": "🔧 Dediziertes Chrome-Profil",
         "file_path_label": "Dateipfad:",
         "file_path_placeholder": "Wählen Sie eine .pkl-Datei aus oder geben Sie den Pfad ein",
         "generate_tooltip": "Öffnet einen Browser zum Verbinden und Abrufen von Cookies",
@@ -165,6 +166,16 @@
         "session_cookies": "🔄 Sitzung: {count}",
         "file_location": "<br/>📁 Datei: {path}",
         "test_with_browser": "{icon} <i>Test durchgeführt mit: {browser}</i>",
+        "chrome_profile_size": "📊 Profilgröße: {size}",
+        "chrome_profile_size_empty": "📊 Leeres Profil (nicht verwendet)",
+        "clear_chrome_profile": "Chrome-Profil löschen",
+        "clear_chrome_profile_tooltip": "Löscht alle Daten aus dem dedizierten Chrome-Profil (Cache, Verlauf usw.)",
+        "clear_chrome_confirm_title": "Löschen bestätigen",
+        "clear_chrome_confirm_message": "Möchten Sie das dedizierte Chrome-Profil wirklich löschen?\n\nDadurch werden Cache, Verlauf und alle gespeicherten Daten gelöscht.\nEden-Cookies werden NICHT gelöscht.",
+        "clear_chrome_success_title": "Erfolg",
+        "clear_chrome_success_message": "Chrome-Profil erfolgreich gelöscht.",
+        "clear_chrome_error_title": "Fehler",
+        "clear_chrome_error_message": "Chrome-Profil kann nicht gelöscht werden.",
         "browse_dialog_title": "Cookie-Datei auswählen",
         "browse_dialog_filter": "Pickle-Dateien (*.pkl);;Alle Dateien (*.*)",
         "import_warning_title": "Warnung",
