--- a/Language/fr.json
+++ b/Language/fr.json
@@ -143,6 +143,7 @@
         "title": "🍪 Gestion des Cookies Eden",
         "info_group_title": "📊 État des Cookies",
         "import_group_title": "📂 Import Manuel",
+        "chrome_profile_section": "🔧 Profil Chrome Dédié",
         "file_path_label": "Chemin du fichier :",
         "file_path_placeholder": "Sélectionnez un fichier .pkl ou saisissez le chemin",
         "generate_tooltip": "Ouvre un navigateur pour se connecter et récupérer les cookies",
@@ -165,6 +166,16 @@
         "session_cookies": "🔄 Session: {count}",
         "file_location": "<br/>📁 Fichier: {path}",
         "test_with_browser": "{icon} <i>Test effectué avec: {browser}</i>",
+        "chrome_profile_size": "📊 Taille du profil: {size}",
+        "chrome_profile_size_empty": "📊 Profil vide (non utilisé)",
+        "clear_chrome_profile": "Purger le profil Chrome",
+        "clear_chrome_profile_tooltip": "Supprime toutes les données du profil Chrome dédié (cache, historique, etc.)",
+        "clear_chrome_confirm_title": "Confirmer la purge",
+        "clear_chrome_confirm_message": "Êtes-vous sûr de vouloir purger le profil Chrome dédié ?\n\nCela supprimera le cache, l'historique et toutes les données stockées.\nLes cookies Eden ne seront PAS supprimés.",
+        "clear_chrome_success_title": "Succès",
+        "clear_chrome_success_message": "Le profil Chrome a été purgé avec succès.",
+        "clear_chrome_error_title": "Erreur",
+        "clear_chrome_error_message": "Impossible de purger le profil Chrome.",
         "browse_dialog_title": "Sélectionner un fichier de cookies",
         "browse_dialog_filter": "Fichiers Pickle (*.pkl);;Tous les fichiers (*.*)",
         "import_warning_title": "Attention",
