feat: finalize Chrome Profile v0.108 with UI modernization and backup optimization
Complete implementation of dedicated Chrome profile for Eden Herald scraping with
AppData storage, automatic migration, and optimized backup strategy.

UI Enhancements:
- Settings > Herald > Cookies section modernized:
  * Removed obsolete cookies path field (automatic AppData management)
  * Removed browse/move buttons (no longer needed)
  * Added info label showing AppData/Eden/ path
  * Added "Clean Eden" button (red) with confirmation dialog
  * Added "Open Folder" button for direct AppData access
- Cookie Manager dialog simplified:
  * Removed "Clear Chrome Profile" button (duplicate functionality)
  * Users now use "Clean Eden" in Settings for unified cleanup

Technical Changes:
- Backup strategy optimization (backup_manager.py):
  * _perform_cookies_backup() completely rewritten
  * OLD: Backed up entire Eden folder (cookies + ChromeProfile = 50-150 MB)
  * NEW: Backs up ONLY eden_cookies.pkl file (10-50 KB)
  * Compressed: ZIP containing single .pkl file
  * Uncompressed: Direct .pkl copy
  * Size reduction: 99%+ (from 50+ MB to ~10 KB)
  * Reason: Fix retention policy deleting backups immediately
- Settings dialog (UI/settings_dialog.py):
  * New _clean_eden_folder() method - deletes entire Eden folder with confirmation
  * Updated _open_cookies_folder() - opens AppData/Eden/ directory
  * Removed _browse_cookies_folder() method - obsolete
  * Fixed backup folder open buttons - create folders if missing
  * Removed self.cookies_path_edit references from UI and _load_settings()
- Main app (main.py):
  * Removed cookies_folder from save_configuration()
  * Cookies path no longer user-configurable
- Cookie Manager (UI/dialogs.py):
  * Removed chrome_buttons_layout with purge button
  * Removed clear_chrome_profile() method

Translations:
- Added 15+ new translation keys in FR/EN/DE:
  * buttons.clean_eden_button
  * buttons.clean_eden_tooltip
  * cookie_manager.eden_storage_info

--- a/Language/en.json
+++ b/Language/en.json
@@ -136,7 +136,9 @@
         "eden_manage": "⚙️ Manage",
         "cookie_generate": "🔐 Generate Cookies",
         "cookie_delete": "🗑️ Delete",
-        "cookie_browse": "📁 Browse"
+        "cookie_browse": "📁 Browse",
+        "clean_eden_button": "Clean Eden",
+        "clean_eden_tooltip": "Delete all cookies and Chrome profile temporary files"
     },
     "cookie_manager": {
         "window_title": "Eden Cookies Management",
@@ -168,6 +170,7 @@
         "test_with_browser": "{icon} <i>Test performed with: {browser}</i>",
         "chrome_profile_size": "📊 Profile size: {size}",
         "chrome_profile_size_empty": "📊 Empty profile (not used)",
+        "eden_storage_info": "Automatic storage in",
         "clear_chrome_profile": "Clear Chrome Profile",
         "clear_chrome_profile_tooltip": "Deletes all data from the dedicated Chrome profile (cache, history, etc.)",
         "clear_chrome_confirm_title": "Confirm Purge",
@@ -250,7 +253,15 @@
             "move_folder_merge_question": "Do you want to merge the files?",
             "move_folder_delete_title": "Delete old folder?",
             "move_folder_delete_question": "The folder has been copied successfully. Do you want to delete the old folder?",
-            "theme_change_restart": "The theme has been changed. Please restart the application for the changes to take effect."
+            "theme_change_restart": "The theme has been changed. Please restart the application for the changes to take effect.",
+            "clean_eden_confirm_title": "Confirm Cleanup",
+            "clean_eden_confirm_message": "⚠️ This action will delete:\n\n• All Eden cookies\n• Complete Chrome profile (cache, history, session)\n\n📁 Folder: {path}\n\nYou will need to regenerate your cookies after this operation.\n\nContinue?",
+            "clean_eden_success_title": "Cleanup Successful",
+            "clean_eden_success_message": "✅ The Eden folder has been successfully cleaned.\n\nAll cookies and temporary files have been deleted.",
+            "clean_eden_empty_title": "Empty Folder",
+            "clean_eden_empty_message": "ℹ️ The Eden folder is already empty or does not exist.",
+            "clean_eden_error_title": "Error",
+            "clean_eden_error_message": "❌ Error during cleanup:\n\n{error}"
         }
     },
     "app": {
