--- a/Language/de.json
+++ b/Language/de.json
@@ -134,9 +134,11 @@
         "eden_refresh": "🔄 Aktualisieren",
         "eden_search": "🔍 Suchen",
         "eden_manage": "⚙️ Verwalten",
-        "cookie_generate": "🔐 Cookies Generieren",
+        "cookie_generate": "🔐 Cookies generieren",
         "cookie_delete": "🗑️ Löschen",
-        "cookie_browse": "📁 Durchsuchen"
+        "cookie_browse": "📁 Durchsuchen",
+        "clean_eden_button": "Eden bereinigen",
+        "clean_eden_tooltip": "Alle Cookies und temporären Chrome-Profildateien löschen"
     },
     "cookie_manager": {
         "window_title": "Eden-Cookies-Verwaltung",
@@ -168,6 +170,7 @@
         "test_with_browser": "{icon} <i>Test durchgeführt mit: {browser}</i>",
         "chrome_profile_size": "📊 Profilgröße: {size}",
         "chrome_profile_size_empty": "📊 Leeres Profil (nicht verwendet)",
+        "eden_storage_info": "Automatische Speicherung in",
         "clear_chrome_profile": "Chrome-Profil löschen",
         "clear_chrome_profile_tooltip": "Löscht alle Daten aus dem dedizierten Chrome-Profil (Cache, Verlauf usw.)",
         "clear_chrome_confirm_title": "Löschen bestätigen",
@@ -250,7 +253,15 @@
             "move_folder_merge_question": "Möchten Sie die Dateien zusammenführen?",
             "move_folder_delete_title": "Alten Ordner löschen?",
             "move_folder_delete_question": "Der Ordner wurde erfolgreich kopiert. Möchten Sie den alten Ordner löschen?",
-            "theme_change_restart": "Das Thema wurde geändert. Bitte starten Sie die Anwendung neu, damit die Änderungen wirksam werden."
+            "theme_change_restart": "Das Theme wurde geändert. Bitte starten Sie die Anwendung neu, damit die Änderungen wirksam werden.",
+            "clean_eden_confirm_title": "Bereinigung bestätigen",
+            "clean_eden_confirm_message": "⚠️ Diese Aktion löscht:\n\n• Alle Eden-Cookies\n• Vollständiges Chrome-Profil (Cache, Verlauf, Sitzung)\n\n📁 Ordner: {path}\n\nSie müssen Ihre Cookies nach diesem Vorgang neu generieren.\n\nFortfahren?",
+            "clean_eden_success_title": "Bereinigung erfolgreich",
+            "clean_eden_success_message": "✅ Der Eden-Ordner wurde erfolgreich bereinigt.\n\nAlle Cookies und temporären Dateien wurden gelöscht.",
+            "clean_eden_empty_title": "Leerer Ordner",
+            "clean_eden_empty_message": "ℹ️ Der Eden-Ordner ist bereits leer oder existiert nicht.",
+            "clean_eden_error_title": "Fehler",
+            "clean_eden_error_message": "❌ Fehler bei der Bereinigung:\n\n{error}"
         }
     },
     "tooltips": {
