--- a/Language/fr.json
+++ b/Language/fr.json
@@ -136,7 +136,9 @@
         "eden_manage": "⚙️ Gérer",
         "cookie_generate": "🔐 Générer des Cookies",
         "cookie_delete": "🗑️ Supprimer",
-        "cookie_browse": "📁 Parcourir"
+        "cookie_browse": "📁 Parcourir",
+        "clean_eden_button": "Nettoyer Eden",
+        "clean_eden_tooltip": "Supprime tous les cookies et fichiers temporaires du profil Chrome"
     },
     "cookie_manager": {
         "window_title": "Gestion des Cookies Eden",
@@ -168,6 +170,7 @@
         "test_with_browser": "{icon} <i>Test effectué avec: {browser}</i>",
         "chrome_profile_size": "📊 Taille du profil: {size}",
         "chrome_profile_size_empty": "📊 Profil vide (non utilisé)",
+        "eden_storage_info": "Stockage automatique dans",
         "clear_chrome_profile": "Purger le profil Chrome",
         "clear_chrome_profile_tooltip": "Supprime toutes les données du profil Chrome dédié (cache, historique, etc.)",
         "clear_chrome_confirm_title": "Confirmer la purge",
@@ -250,7 +253,15 @@
             "move_folder_merge_question": "Voulez-vous fusionner les fichiers ?",
             "move_folder_delete_title": "Supprimer l'ancien dossier ?",
             "move_folder_delete_question": "Le dossier a été copié avec succès. Voulez-vous supprimer l'ancien dossier ?",
-            "theme_change_restart": "Le thème a été changé. Veuillez redémarrer l'application pour que les changements prennent effet."
+            "theme_change_restart": "Le thème a été changé. Veuillez redémarrer l'application pour que les changements prennent effet.",
+            "clean_eden_confirm_title": "Confirmer le nettoyage",
+            "clean_eden_confirm_message": "⚠️ Cette action va supprimer :\n\n• Tous les cookies Eden\n• Le profil Chrome complet (cache, historique, session)\n\n📁 Dossier : {path}\n\nVous devrez régénérer vos cookies après cette opération.\n\nContinuer ?",
+            "clean_eden_success_title": "Nettoyage réussi",
+            "clean_eden_success_message": "✅ Le dossier Eden a été nettoyé avec succès.\n\nTous les cookies et fichiers temporaires ont été supprimés.",
+            "clean_eden_empty_title": "Dossier vide",
+            "clean_eden_empty_message": "ℹ️ Le dossier Eden est déjà vide ou n'existe pas.",
+            "clean_eden_error_title": "Erreur",
+            "clean_eden_error_message": "❌ Erreur lors du nettoyage :\n\n{error}"
         }
     },
     "tooltips": {
