fix: translate CharacterUpdateDialog window to FR/EN/DE
Complete translation of the character update comparison window that was
displaying all texts in hardcoded French.

UI Changes:
- CharacterUpdateDialog class in UI/dialogs.py:
  * Window title now uses lang.get("dialogs.character_update.title")
  * Header text translated with character name formatting
  * Comparison info label with full HTML description
  * Column headers: Apply, Field, Current value, New value
  * Buttons: "Select all", "Deselect all", "Apply changes"
  * Field names: Level, Class, Race, Realm, Guild, Realm Points, Realm Rank, Server
  * Empty value placeholder: "(empty)"/"(vide)"/"(leer)"

Technical Implementation:
- Replaced all hardcoded French strings with lang.get() calls
- Added 16 new translation keys in dialogs.character_update section:
  * title, header, comparison_info
  * apply_column, field_column, current_column, new_column
  * select_all, deselect_all, apply_changes
  * field_level, field_class, field_race, field_realm, field_guild
  * field_realm_points, field_realm_rank, field_server
  * empty_value
- Dynamic text generation with .format(name=character_name) for personalization

Translations:
- Added 16 new translation keys in FR/EN/DE (48 total entries):
  * dialogs.character_update.title
  * dialogs.character_update.header
  * dialogs.character_update.comparison_info
  * dialogs.character_update.apply_column
  * dialogs.character_update.field_column
  * dialogs.character_update.current_column
  * dialogs.character_update.new_column
  * dialogs.character_update.select_all
  * dialogs.character_update.deselect_all
  * dialogs.character_update.apply_changes
  * dialogs.character_update.field_level
  * dialogs.character_update.field_class
  * dialogs.character_update.field_race
  * dialogs.character_update.field_realm
  * dialogs.character_update.field_guild
  * dialogs.character_update.field_realm_points
  * dialogs.character_update.field_realm_rank
  * dialogs.character_update.f

--- a/Language/de.json
+++ b/Language/de.json
@@ -46,6 +46,27 @@
             "title": "Charakter duplizieren",
             "prompt": "Name des neuen Charakters:"
         },
+        "character_update": {
+            "title": "Aktualisierung - {name}",
+            "header": "Charakteraktualisierung: {name}",
+            "comparison_info": "<b>Datenvergleich:</b><br>• <span style='color: green;'>✓</span> = Identische Werte (keine Änderung)<br>• <span style='color: red;'>Aktueller Wert</span> → <span style='color: green;'><b>Neuer Wert</b></span> = Änderung erkannt<br>Markieren Sie die Änderungen, die Sie anwenden möchten.",
+            "apply_column": "Anwenden",
+            "field_column": "Feld",
+            "current_column": "Aktueller Wert",
+            "new_column": "Neuer Wert",
+            "select_all": "Alle auswählen",
+            "deselect_all": "Alle abwählen",
+            "apply_changes": "Änderungen anwenden",
+            "field_level": "Stufe",
+            "field_class": "Klasse",
+            "field_race": "Rasse",
+            "field_realm": "Reich",
+            "field_guild": "Gilde",
+            "field_realm_points": "Reichspunkte",
+            "field_realm_rank": "Reichsrang",
+            "field_server": "Server",
+            "empty_value": "(leer)"
+        },
         "columns_config": {
             "title": "Spaltenkonfiguration",
             "description": "Wählen Sie die anzuzeigenden Spalten:",
