fix: Resolve Selenium first-load freeze and implement proactive Herald button state management
Major stability and UX improvements for Herald operations during Eden validation.

UI Enhancements:
- Proactive button disabling during validation (no more error popups)
- Explanatory tooltips on disabled buttons in 3 languages
- Instant button re-enable when validation completes (<100ms vs 2-3s)
- Context menu action state refresh before display

Technical Changes:
- Fixed Selenium freeze with WebDriverWait + document.readyState check (15s timeout)
- Implemented flag-based validation tracking (eden_validation_in_progress)
- Created _update_herald_buttons_state() in ui_manager.py and dialogs.py
- Connected to thread lifecycle (status_updated, finished signals)
- Added show_context_menu() hook for QAction state refresh
- Protected 4 Herald operation entry points from Chrome profile conflicts

Stability Improvements:
- Chrome profile conflict prevention (simultaneous Selenium instances)
- Silent operation blocking (no popups, disabled buttons with tooltips)
- Thread-safe state management with flag instead of isRunning()
- Debug logging with LOGGER_UI for troubleshooting

Translations:
- Added 1 new translation key in FR/EN/DE:
  * herald_buttons.validation_in_progress

Documentation:
- Created HERALD_BUTTONS_STATE_MANAGEMENT_EN.md (700+ lines technical doc)
- Updated CHANGELOG_FR.md with v0.108 corrections
- Updated CHANGELOG_EN.md with v0.108 corrections
- Updated CHANGELOG_SIMPLE_FR.md with v0.108 summary
- Updated CHANGELOG_SIMPLE_EN.md with v0.108 summary

Files Modified:
- Functions/eden_scraper.py (WebDriverWait fix)
- Functions/cookie_manager.py (WebDriverWait fix)
- Functions/ui_manager.py (flag-based state management, 5 new/modified methods)
- main.py (silent blocking in 2 methods)
- UI/dialogs.py (CharacterSheetWindow state management, 4 modified methods)
- Language/fr.json, en.json, de.json (herald_buttons section)
- Documentations/Eden/HERALD_BUTTONS_STATE_MANAGE

--- a/Language/de.json
+++ b/Language/de.json
@@ -161,6 +161,9 @@
         "clean_eden_button": "Eden bereinigen",
         "clean_eden_tooltip": "Alle Cookies und temporären Chrome-Profildateien löschen"
     },
+    "herald_buttons": {
+        "validation_in_progress": "⏳ Eden-Validierung läuft... Bitte warten"
+    },
     "cookie_manager": {
         "window_title": "Eden-Cookies-Verwaltung",
         "title": "🍪 Eden-Cookies-Verwaltung",
