feat: add optional debug HTML file saving to Settings > Debug
Added user-configurable options to control debug HTML file creation for Herald operations.

UI Enhancements:
- Added 2 checkboxes in Settings > Debug > Debug Eden:
  * "Save Herald HTML (debug_herald_page.html)"
  * "Save Connection Test HTML (debug_test_connection.html)"
- Tooltips explain diagnostic purpose in user's language
- Both options disabled by default

Technical Changes:
- Added system.debug subsection in config_schema.py:
  * save_herald_html: False (default)
  * save_test_connection_html: False (default)
- Modified eden_scraper.py (lines 155-171):
  * Check config.get("system.debug.save_herald_html") before saving
  * Save to Logs/ folder using get_logs_dir() for portability
  * Proper exception logging instead of silent pass
- Modified cookie_manager.py (lines 718-734):
  * Same conditional save pattern as eden_scraper
  * Uses get_logs_dir() for .exe one-file compatibility
- Updated settings_dialog.py:
  * Added 2 QCheckBox widgets with translated labels and tooltips
  * Added checkbox state loading in _load_settings()
- Updated main.py save_configuration():
  * Save checkbox states to system.debug.save_herald_html and .save_test_connection_html

Portability:
- Files saved to Logs/ folder (not Scripts/)
- Uses path_manager.get_logs_dir() for .exe one-file builds
- Logs/ folder created automatically if missing

Translations:
- Added 4 new translation keys in FR/EN/DE:
  * settings.labels.debug_save_herald_html
  * settings.labels.debug_save_test_connection_html
  * settings.tooltips.debug_save_herald_html
  * settings.tooltips.debug_save_test_connection_html
- Added settings.groups.debug_herald_html group

Files Modified:
- Functions/config_schema.py (added system.debug subsection)
- Functions/eden_scraper.py (conditional HTML save + Logs/ path)
- Functions/cookie_manager.py (conditional HTML save + Logs/ path)
- UI/settings_dialog.py (2 checkboxes + load/save logic)
- main.py (save checkbox

--- a/Language/de.json
+++ b/Language/de.json
@@ -376,6 +376,7 @@
             "log_folder": "Logs-Ordner",
             "debug_app": "Anwendungs-Debug",
             "debug_eden": "Eden-Debug",
+            "debug_herald_html": "Herald-HTML-Debugging",
             "font": "Textgröße",
             "bulk_actions": "Massenaktionen",
             "misc": "Verschiedenes"
@@ -398,7 +399,13 @@
             "show_debug_window": "Debug-Fenster beim Start anzeigen",
             "theme": "Thema",
             "font_scale": "Textgröße",
-            "disable_disclaimer": "Startwarnmeldung deaktivieren"
+            "disable_disclaimer": "Startwarnmeldung deaktivieren",
+            "debug_save_herald_html": "💾 Herald-HTML speichern (debug_herald_page.html)",
+            "debug_save_test_connection_html": "💾 Verbindungstest-HTML speichern (debug_test_connection.html)"
+        },
+        "tooltips": {
+            "debug_save_herald_html": "Speichert den HTML-Code der Herald-Seite im Logs/-Ordner zur Diagnose von Scraping-Problemen",
+            "debug_save_test_connection_html": "Speichert den HTML-Code des Herald-Verbindungstests im Logs/-Ordner zur Diagnose von Authentifizierungsproblemen"
         },
         "dialog_titles": {
             "select_character_folder": "Charakterordner auswählen",
